--- a/facilito/templates/base/base.html
+++ b/facilito/templates/base/base.html
@@ -6,17 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     {% block styles %} {% endblock styles %}
     <title> cfDjango - {% block title %} Document {% endblock title %} </title>
 </head>
 <body>
-    {% block header %}  <h1> It works! </h1> {% endblock header %}
+    <div class="container">
+            {% block navbar %}
+                <div class="bs-docs-section clearfix">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="bs-component">
+                                <nav class="navbar navbar-default">
+                                    <div class="container-fluid">
+                                        <div class="navbar-header">
+                                            <a class="navbar-brand" href="#">Home</a>
+                                        </div>
+                                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                        <ul class="nav navbar-nav">
+                                            <li class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mascotas <span class="caret"></span></a>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li><a href="#">Registrar</a></li>
+                                                    <li><a href="#">Listar</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Adopciones<span class="caret"></span></a>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li><a href="#">Solicitar</a></li>
+                                                    <li><a href="#">Listar solicitudes</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                        <ul class="nav navbar-nav navbar-right">
+                                            <li class="dropdown"><a href="http://codigofacilito.com" onclick="pageTracker._link(this.href); return false;">Código Facilito</a>
+                                            </li>
+                                            <li class="dropdown">
+                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones<span class="caret"></span></a>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li><a href="#">Salir</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+    
+        {% endblock navbar %}
+        {% block header %}  <h1> It works! </h1> {% endblock header %}
+    
+        {% block content %} <p> Contenido </p> {% endblock content %}
+    
+        {% block footer %} <p> Footer </p> {% endblock footer %}
+    </div>
 
-    {% block content %} <p> Contenido </p> {% endblock content %}
-
-    {% block footer %} <p> Footer </p> {% endblock footer %}
-
-
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="{% static 'scripts/bootstrap.min.js' %}"></script>
     {% block scripts %} {% endblock scripts %}
 </body>
 </html>
