--- a/facilito/templates/base/base.html
+++ b/facilito/templates/base/base.html
@@ -20,14 +20,14 @@
                                 <nav class="navbar navbar-default">
                                     <div class="container-fluid">
                                         <div class="navbar-header">
-                                            <a class="navbar-brand" href="#">Home</a>
+                                            <a class="navbar-brand" href="{% url 'mascotas:index' %}">Home</a>
                                         </div>
                                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                         <ul class="nav navbar-nav">
                                             <li class="dropdown">
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mascotas <span class="caret"></span></a>
                                                 <ul class="dropdown-menu" role="menu">
-                                                    <li><a href="#">Registrar</a></li>
+                                                    <li><a href="{% url 'mascotas:mascota_view' %}">Registrar</a></li>
                                                     <li><a href="#">Listar</a></li>
                                                 </ul>
                                             </li>
@@ -58,11 +58,11 @@
             </div>    
     
         {% endblock navbar %}
-        {% block header %}  <h1> It works! </h1> {% endblock header %}
+        {% block header %}  {% endblock header %}
     
         {% block content %} <p> Contenido </p> {% endblock content %}
     
-        {% block footer %} <p> Footer </p> {% endblock footer %}
+        {% block footer %} {% endblock footer %}
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
