--- a/facilito/templates/base/base.html
+++ b/facilito/templates/base/base.html
@@ -28,7 +28,7 @@
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Mascotas <span class="caret"></span></a>
                                                 <ul class="dropdown-menu" role="menu">
                                                     <li><a href="{% url 'mascotas:mascota_view' %}">Registrar</a></li>
-                                                    <li><a href="#">Listar</a></li>
+                                                    <li><a href="{% url 'mascotas:mascota_listar' %}">Listar</a></li>
                                                 </ul>
                                             </li>
                                             <li class="dropdown">
