Agregando CRUD con vistas basadas en clases para las adopciones

--- a/facilito/templates/mascotas/mascota_list.html
+++ b/facilito/templates/mascotas/mascota_list.html
@@ -14,7 +14,7 @@
                 <th> Edad </th>
                 <th> Fecha de rescate </th>
                 <th> Adoptante </th>
-                <th> Acctiones </th>
+                <th> Acciones </th>
             </tr>
         </thead>
         <tbody>
