--- a/facilito/templates/base/base.html
+++ b/facilito/templates/base/base.html
@@ -34,8 +34,8 @@
                                             <li class="dropdown">
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Adopciones<span class="caret"></span></a>
                                                 <ul class="dropdown-menu" role="menu">
-                                                    <li><a href="#">Solicitar</a></li>
-                                                    <li><a href="#">Listar solicitudes</a></li>
+                                                    <li><a href="{% url 'adopciones:solicitud_crear' %}">Solicitar</a></li>
+                                                    <li><a href="{% url 'adopciones:solicitud_listar' %}">Listar solicitudes</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
