--- a/facilito/templates/base/base.html
+++ b/facilito/templates/base/base.html
@@ -45,6 +45,7 @@
                                             <li class="dropdown">
                                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Opciones<span class="caret"></span></a>
                                                 <ul class="dropdown-menu" role="menu">
+                                                    <li> <a href="{% url 'usuarios:registro' %}"> Registrar </a> </li>
                                                     <li><a href="#">Salir</a></li>
                                                 </ul>
                                             </li>
